# Grok-Api

./: .gitignore  README.md  api_server.py  manual.py  pyproject.toml  test_all_models.py  test_chat.py  test_chat_stream.py
core/: grok.py
core/reverse/: parser.py
examples/: manual.py
grok_api/: __init__.py  api_server.py  manual.py
grok_api/core/: __init__.py  exceptions.py  grok.py  logger.py  runtime.py
grok_api/core/mappings/: grok.json  txid.json
grok_api/core/reverse/: parser.py
tests/: test_all_models.py  test_chat.py  test_chat_stream.py
