[project]
name = "grok-api"
version = "0.1.0"
description = "Grok API wrapper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "coincurve>=21.0.0",
    "colorama>=0.4.6",
    "curl-cffi>=0.14.0",
    "fastapi>=0.127.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]

[project.scripts]
grok-api-server = "grok_api.api_server:main"
grok-api-manual = "grok_api.manual:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grok_api"]
